JsonExt; an simple implciti Format provider for simple value classes!